--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+html, body, #root {
+  margin:0px;
+  height: 100%;
+}
+
 body {
   padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
